add_form.html.erb

--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,34 +1,3 @@
 <h1>新增書本</h1>
 
-<% if @book.errors.any?%>
-    <ul>
-        <%@book.errors.full_messages.each do |messages|%>
-            <li><%= messages%></li>
-        <%end%>
-    </ul>
-<%end%>
-
-<%= form_for(@book) do |form| %>
-    <%= form.label :title, '標題' %>
-    <%= form.text_field :title %>
-<br>
-    <%= form.label :description, '內容'%>
-    <%= form.text_area :description %>
-<br>
-    <%= form.label :list_price, '標價' %>
-    <%= form.number_field :list_price %>
-<br>
-     <%= form.label :sell_price, '售價' %>
-    <%= form.number_field :sell_price %>
-<br>
-     <%= form.label :page_num, '頁數' %>
-    <%= form.number_field :page_num %>
-<br>
-    <%= form.label :isbn, 'ISBN' %>
-    <%= form.text_field :isbn %>
-<br>
-    <%= form.label :isbn13, 'ISBN13' %>
-    <%= form.text_field :isbn13 %>
-<br>
-    <%= form.submit%>
-<% end %>
+<%= render 'form' %>
