--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,35 +1,91 @@
-<h1 class="title">書本列表</h1>
+<!-- <h1 class="title">書本列表</h1>
 
 <%= link_to "新增書本", new_book_path, class: 'button is-danger' %>
 
-<% @book.each do |book| %>
-<div class="columns">
-    <div class="column is-one-quarter card ">
-        <div class="card-image">
-            <figure class="image is-4by3">
-                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-            </figure>
-        </div>
-        <div class="card-content">
-            <div class="media">
-                <div class="media-left">
-                    <figure class="image is-48x48">
-                        <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-                    </figure>
-                </div>
-                <div class="media-content">
-                    <p class="title is-4"><%= book.title %></p>
-                    <p class="subtitle is-6">@johnsmith</p>
+
+<div class="columns is-multiline">
+    <% @book.each do |book| %>
+    <div class="column is-4">
+        <div class="card">
+            <div class="card-image">
+                <figure class="image is-4by3">
+                    <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                </figure>
+            </div>
+            <div class="card-content">
+                <div class="media">
+                    <div class="media-left">
+                        <figure class="image is-48x48">
+                            <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+                        </figure>
+                    </div>
+                    <div class="media-content">
+                        <p class="title is-4"><%= book.title %></p>
+                        <p class="subtitle is-6">@johnsmith</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="content">
-            <%= book.description %> <a>@bulmaio</a>.
-            <a href="#">#css</a> <a href="#">#responsive</a>
-            <br>
-            <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
+            <div class="content">
+                <%= book.description %> <a>@bulmaio</a>.
+                <a href="#">#css</a> <a href="#">#responsive</a>
+                <br>
+                <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
+            </div>
         </div>
     </div>
 </div>
 
+<% end %> -->
+
+
+
+
+<h1 class="title"><i class="fas fa-book-dead"></i>書本列表</h1>
+
+<%= link_to "新增書本", new_book_path, class: 'button is-danger' %>
+
+<section class="columns is-multiline">
+<% @book.each do |book| %>
+  <div class="column is-4">
+    <div class="card">
+      <div class="card-image">
+        <figure class="image">
+        <% if book.cover_img.attached?%>
+        <%= image_tag book.cover_img.variant(resize_to_limit: [300, 300])%>
+        <% else %>
+          <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+          
+          <% end %>
+          
+        </figure>
+      </div>
+      <div class="card-content">
+        <div class="media">
+          <div class="media-left">
+            <figure class="image is-48x48">
+              <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+            </figure>
+          </div>
+          <div class="media-content">
+            <p class="title is-4"><%= book.title %></p>
+            <p class="subtitle is-6">作者：@johnsmith</p>
+          </div>
+        </div>
+
+        <div class="content">
+          <%= book.description %> <a>@bulmaio</a>.
+          <a href="#">#css</a> <a href="#">#responsive</a>
+          <br>
+          <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
+          發售日期<%= book.published_at%>
+          <hr>
+          <%= link_to "編輯", edit_book_path(book), class: 'button is-success is-small' %>
+         
+
+
+        </div>
+      </div>
+    </div>
+  </div>
 <% end %>
+</section>
