--- a/app/views/admin/books/index.html.erb
+++ b/app/views/admin/books/index.html.erb
@@ -1,5 +1,6 @@
 <h1 class="title"><i class="fas fa-book-dead"></i>書本列表</h1>
 
+<%= link_to "新增書本", new_admin_book_path, class: 'button is-danger' %>
 <%= paginate @book%>
 
 <section class="columns is-multiline">
@@ -37,7 +38,7 @@
           <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
           發售日期<%= book.published_at%>
           <hr>
-          <%= link_to "放到購物車", "#", class: 'button is-success is-small' %>
+          <%= link_to "編輯", edit_admin_book_path(book), class: 'button is-success is-small' %>
          
 
 
