--- a/app/views/layouts/backend.erb
+++ b/app/views/layouts/backend.erb
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>TentenBookstore</title>
+  <title>TentenBookstore後台</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <%= render 'shared/frontend/navbar' %>
+  <%= render 'shared/backend/navbar' %>
   <section class="section">
     <div class="container">
       <%= render 'shared/flash' if notice %>
